[Engine] Current development snapshot
Implemented first advanced graphics effects
Added support for the mini map
Moved light tracer to engine
Added support for world map
Improved Nifty-GUI implementation